--- a/styles/index.css
+++ b/styles/index.css
@@ -19,10 +19,23 @@
     color-scheme: dark light;
 }
 
-    body {
-        background-image: url("https://raw.githubusercontent.com/gigapipehq/homepage/refs/heads/main/docs/public/header-bg-optimised-scaled.jpg");
-        background-blend-mode: lighten;
-    }
+body {
+    background-image: url("https://raw.githubusercontent.com/gigapipehq/homepage/refs/heads/main/docs/public/header-bg-optimised-scaled.jpg");
+    background-blend-mode: lighten;
+}
 
+.floating {  
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+}
 
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }    
+}
 
