--- a/styles/index.css
+++ b/styles/index.css
@@ -24,6 +24,15 @@ body {
     background-blend-mode: lighten;
 }
 
+img[alt*="Gigapipe"] {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+
 .floating {  
     animation-name: floating;
     animation-duration: 3s;
