--- a/styles/index.css
+++ b/styles/index.css
@@ -32,6 +32,8 @@ img[alt*="Gigapipe"] {
     animation-timing-function: ease-in-out;
     margin-left: 30px;
     margin-top: 5px;
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
 }
 
 .floating {  
