--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,10 @@ img[alt*="Gigapipe"] {
     filter: drop-shadow(5px 5px 5px #222);
 }
 
+img[alt*="Founders"] {
+    -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+}
+
 .floating {  
     animation-name: floating;
     animation-duration: 3s;
