--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,8 @@
 body {
     background-image: url("https://raw.githubusercontent.com/gigapipehq/homepage/refs/heads/main/docs/public/header-bg-optimised-scaled-4.jpg");
     background-blend-mode: lighten;
-    background-size: cover;
+    background-repeat: no-repeat;
+ 
 }
 
 img[alt*="Gigapipe"] {
