--- a/styles/index.css
+++ b/styles/index.css
@@ -56,3 +56,7 @@ img[alt*="Founders"] {
     100%   { transform: translate(0, -0px); }    
 }
 
+/* reduce top padding */
+.md\:pt-16 {
+        padding-top: 1rem;
+}
