--- a/src/components/pricing/PricingCalculator.module.css
+++ b/src/components/pricing/PricingCalculator.module.css
@@ -1,7 +1,7 @@
 .pricingCalculator {
   margin: 0 auto;
   padding: 2rem;
-  background-color: #080808bf;
+  /* background-color: #080808bf; */
   border-radius: 15px;
 }
 
