--- a/src/components/pricing/PricingCalculator.module.css
+++ b/src/components/pricing/PricingCalculator.module.css
@@ -158,14 +158,15 @@ input:checked + .slider:before {
   border-width: 0;
 }
 
-.signUpContainer {
+.totalPriceRow {
   display: flex;
-  justify-content: flex-end;
-  margin-top: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
 .signUpButton {
-  background-color: #8839e9;
+  background-color: #0070f3;
   color: white;
   text-decoration: none;
   padding: 0.5rem 1rem;
@@ -175,5 +176,5 @@ input:checked + .slider:before {
 }
 
 .signUpButton:hover {
-  background-color: #8839e9;
+  background-color: #0051bb;
 }
