--- a/styles/index.css
+++ b/styles/index.css
@@ -81,3 +81,10 @@ img[alt*="Founders"] {
 .rspress-home-hero-tagline {
     font-size: 1.4rem;
 }
+
+/* background on form only */
+.rspress-doc:has(> form) {
+    background-image: url(https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW84ZDFvd2ttMGt0aXJ5c3IwMjc2YjFybHlzcGZiNHh5MzBzOWE3ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/3ohhwzIw3bISRhQWME/giphy.webp);
+}
+
+
