--- a/styles/index.css
+++ b/styles/index.css
@@ -82,10 +82,10 @@ img[alt*="Founders"] {
     font-size: 1.4rem;
 }
 
-/* background on form only */
+/* gigapipey background on form only */
 .rspress-doc:has(> form) {
     background-size: 100% auto;
-    background-image: url(https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWZ2eGpmNXZlMG1saGVvZmNybHFrdXp5M2duaXR6aXc5Y2h5bG1mZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/QuOR6K0dsrkdbHDiKM/giphy.webp);
+    background-image: url(https://i.imgur.com/Nq79ZG7.gif);
 }
 
 
