--- a/styles/index.css
+++ b/styles/index.css
@@ -85,7 +85,7 @@ img[alt*="Founders"] {
 /* gigapipey background on form only */
 .rspress-doc:has(> form) {
     background-size: 100% auto;
-    background-image: url(https://i.imgur.com/Nq79ZG7.gif);
+    background-image: url(https://i.imgur.com/AVAGIYU.gif);
 }
 
 
