--- a/styles/index.css
+++ b/styles/index.css
@@ -41,6 +41,12 @@ img[alt*="Founders"] {
     -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.6));
 }
 
+img[alt*="qryn_cloud"] {
+    margin-top: 50px;
+    width: 70%;
+    filter: drop-shadow(9px 10px 4px #4444dd);
+}
+
 .floating {  
     animation-name: floating;
     animation-duration: 3s;
