--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,10 @@
     color-scheme: dark light;
 }
 
+.text-primary{
+    color: var(--rp-c-brand);
+}
+
 body {
     background-image: url("https://raw.githubusercontent.com/gigapipehq/homepage/refs/heads/main/docs/public/header-bg-optimised-scaled-4.jpg");
     background-blend-mode: lighten;
