--- a/styles/index.css
+++ b/styles/index.css
@@ -101,13 +101,13 @@ img[alt*="qryn_cloud"] {
     background-image: url(https://i.imgur.com/MAlOMOW.gif);
 }
 
-div[class^='sidebar'],div[class^='.sidebar'] {
+/* div[class^='sidebar'],div[class^='.sidebar'] {
     opacity: 0;
 }
 
 .rspress-sidebar {
     opacity: 0;
-}
+} */
 
 .custom-content {
     padding: 40px 14%;
