--- a/src/components/pricing/PricingCalculator.module.css
+++ b/src/components/pricing/PricingCalculator.module.css
@@ -1,8 +1,18 @@
 .pricingCalculator {
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   /* background-color: #080808bf; */
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .pricingCalculator {
+    width: 65vw;
+  }
 }
 
 .title {
@@ -18,9 +28,15 @@
 
 .planGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 1rem;
+  grid-template-columns: 1fr;
+  gap: 2rem;
   margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+  .planGrid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .planCard {
@@ -28,6 +44,8 @@
   border-radius: 0.25rem;
   padding: 1rem;
   transition: background-color 0.3s ease;
+  min-width: 10rem;
+  cursor: pointer;
 }
 
 .planCard.selected {
