--- a/styles/index.css
+++ b/styles/index.css
@@ -46,13 +46,7 @@ img[alt*="Founders"] {
     -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.6));
 }
 
-img[alt*="qryn_cloud"] {
-    margin-top: 50px;
-    width: 75%;
-    filter: drop-shadow(3px 3px 3px #4444dd);
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 .floating {  
     animation-name: floating;
@@ -115,16 +109,44 @@ img[alt*="qryn_cloud"] {
     background-size: contain;
 }
 .custom-content {
-    padding: 35px 10%;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='482' fill='none' viewBox='0 0 1440 482'%3E%3Cpath stroke='%23A020F0' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M-50 200c150-100 300 100 450 50s300-150 450-100 300 200 450 150 300-100 450-50'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+    width: 100%;
+    flex:1;
+     margin-left: auto;
+     margin-right: auto;
+     gap: 2rem;
+     margin-bottom: 2rem;
+ 
 }
+
+.custom-content .body {
+    max-width: 72rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.custom-content img[alt*="qryn_cloud"] {
+    margin-top: 50px;
+    filter: drop-shadow(3px 3px 3px #4444dd);
+    margin: 0 auto;
+    justify-self: center;
+    align-self: center;
+}
+
 .custom-content h1 {
     font-size: 3rem;
     font-weight: 600;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    flex:1;
+    
 }
 .custom-content h2 {
     font-size: 2rem;
@@ -132,9 +154,14 @@ img[alt*="qryn_cloud"] {
     margin-bottom: 10px;
 }
 .custom-content h3 {
+
     font-size: 1.15rem;
     font-weight: 400;
     margin-bottom: 20px;
+}
+
+.custom-content p {
+    max-width: 105ch;
 }
 
 .custom-footer {
@@ -158,3 +185,42 @@ img[alt*="qryn_cloud"] {
 .img_inline {
    display: inline-block;
 }
+
+
+
+@media screen and (min-width: 1279px) {
+    p { max-width: 56vw;}
+    .about {
+        width: 56vw;
+        height: calc(90vw * 0.4);
+        border: none;
+        outline: none;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    p { max-width: 70vw;}
+    .about {
+        width: 55vw;
+        height: calc(90vw * 0.4);
+        border: none;
+        outline: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    p { max-width: 80vw;}
+    .about {
+        width: 62vw;
+        height: calc(90vw * 0.4);
+        border: none;
+        outline: none;
+    }
+}
+
+
+
+iframe {
+    width: 100%;
+}
+
